# agentic-llm-gateway

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  ragas_eval_results.csv
.github/workflows/: prompt-promote.yml  prompt-push.yml  ragas-eval.yml
app/: main.py
app/agents/: orchestrator.py  research_agent.py  synthesis_agent.py
app/config/: settings.py
app/gateway/: cache.py  litellm_client.py  router.py
app/guardrails/: validator.py
app/observability/: langfuse_tracker.py  logging_config.py  metrics.py  tracing.py
app/ragas_eval/: evaluator.py
app/tools/: search_tool.py
docker/: litellm_config.yaml  loki-config.yaml  prometheus.yml  promtail-config.yaml  tempo.yaml
docker/grafana/dashboards/: agentic_ai.json
docker/grafana/provisioning/dashboards/: dashboards.yaml
docker/grafana/provisioning/datasources/: datasources.yaml
prompts/: prompts.yaml  research_query_prompt.txt  research_synthesis_prompt.txt  research_system_prompt.txt  synthesis_critique_prompt.txt  synthesis_draft_prompt.txt  synthesis_system_prompt.txt
scripts/: demo.py  manage_prompts.py  run_ragas_eval.py  setup_langfuse.py
tests/: conftest.py  test_agents.py  test_gateway.py  test_gateway_router.py  test_guardrails.py  test_langfuse.py  test_manage_prompts.py  test_ragas.py
